--- a/index.html
+++ b/index.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Development</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1"><script defer src="index.bundle.js"></script><script defer src="home.bundle.js"></script><script defer src="menu.bundle.js"></script></head>
-  <body>
-    <div id="content"></div>
-  </body>
-</html>
+<!doctype html><html><head><meta charset="utf-8"><title>Development</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="runtime.bundle.js"></script><script defer="defer" src="index.bundle.js"></script></head><body></body></html>
